[package]
name = "trading-journal"
version = "1.0.4"
description = "יומן מסחר אישי - Personal Trading Journal Desktop App"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "trading_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "trading-journal"
path = "src/main.rs"

